--- a/TripAB.ipynb
+++ b/TripAB.ipynb
@@ -189,7 +189,13 @@
    "outputs": [],
    "source": [
     "with open('rf_model.pkl', 'wb') as model_file:\n",
-    "    pickle.dump(rf_model, model_file)"
+    "    pickle.dump(rf_model, model_file)\n",
+    "\n",
+    "with open('scaler_x.pkl', 'wb') as scaler_file:\n",
+    "    pickle.dump(scaler_x, scaler_file)\n",
+    "\n",
+    "with open('scaler_y.pkl', 'wb') as scaler_file:\n",
+    "    pickle.dump(scaler_y, scaler_file)"
    ]
   },
   {
